[package]
name = "zkpay"
version = "0.1.0"
edition = "2025"
authors = ["Brandon McGuckin <bmcguckin1@outlook.com>"]
description = "A privacy-preserving payment system using zero-knowledge proofs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
thiserror = "1.0"
anyhow = "1.0"
hex = "0.4"
sha2 = "0.10"
ripemd160 = "0.9"
base64 = "0.21"
